Bug 113353 - UI: floating toolbars have two heading (VCL: gtk2)
Summary: UI: floating toolbars have two heading (VCL: gtk2)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All Linux (All)
: low trivial
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords:
Depends on:
Blocks: Toolbars GTK2
  Show dependency treegraph
 
Reported: 2017-10-22 15:30 UTC by Roman Kuznetsov
Modified: 2017-10-31 14:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
toolbar with two headings (20.10 KB, image/png)
2017-10-22 15:31 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2017-10-22 15:30:18 UTC
Description:
floating toolbars have two heading (VCL: gtk2) (see screenshot from attach)
It is in XFCE, wors for any system theme
Version: 6.0.0.0.alpha1
Build ID: c1d1f859b268f650143d48f294999cda0fa57350
CPU threads: 4; OS: Linux 4.11; UI render: default; VCL: gtk2; 
Locale: ru-RU (ru_RU.UTF-8); Calc: group

In MATE with LO VCL:gtk3 that effect is not reproduce

Steps to Reproduce:
1. Open Writer
2. Drag&Drop Formatting toolbar on half of sheet, that make it "floating"
3. See on two heading

Actual Results:  
floating toolbars have two heading

Expected Results:
floating toolbars have only one heading (additional system heading don't need)


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:56.0) Gecko/20100101 Firefox/56.0
Comment 1 Roman Kuznetsov 2017-10-22 15:31:02 UTC
Created attachment 137208 [details]
toolbar with two headings
Comment 2 Buovjaga 2017-10-22 15:49:05 UTC
Confirmed, if I use the gtk2 VCL backend.

Kompi said it was already in 4.3, so lowering version.

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha1+
Build ID: 2460e7637f635727f4596f3e3d799eed434df082
CPU threads: 8; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on October 22nd 2017
Comment 3 Maxim Monastirsky 2017-10-22 15:52:35 UTC
The gtk3 part was fixed with [1], and I think the same fix will work for gtk2 too. Will try.

[1] https://cgit.freedesktop.org/libreoffice/core/commit/?id=5c19ef214f0f96bc304f3b45168143021b782d3d
Comment 4 Commit Notification 2017-10-22 19:52:33 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d76c4e5c9aaf8bd27ec97679bcaeba5b18aca493

tdf#113353 gtk2: No decoration for floating toolbars

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-10-31 14:27:33 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b51d804949b6860ffac4480c27e540558cb44d3&h=libreoffice-5-4

tdf#113353 gtk2: No decoration for floating toolbars

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.