tdf#113353 gtk2: No decoration for floating toolbars

Some window managers need this explicit setting.

Change-Id: I007f066e29002d8988132f72ef55fbe3b679fa8c